--- a/src/main/webapp/customerList.xhtml
+++ b/src/main/webapp/customerList.xhtml
@@ -1,30 +1,56 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
+<html xmlns="http://www.w3c.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Customer List</title>
     </h:head>
     <h:body>
-        <h1>Customer List</h1>
-        <h:dataTable value="#{customerBean.customerList}" var="customer">
-            <h:column>
-                <f:facet name="header"> <h:outputText value="ID"/> </f:facet>
-                <h:outputText value="#{customer.customerId}"/>
-            </h:column>
-            <h:column>
-                <f:facet name="header"> <h:outputText value="NAME"/> </f:facet>
-                <h:outputText value="#{customer.name}"/>
-            </h:column>
-            <h:column>
-                <f:facet name="header"> <h:outputText value="CITY"/> </f:facet>
-                <h:outputText value="#{customer.city}" />
-            </h:column>
-            <h:column>
-                <f:facet name="header"> <h:outputText value="DISCOUNT"/> </f:facet>
-                <h:outputText value="#{customer.discount}" />
-            </h:column>
-        </h:dataTable>
+        <div class="card">
+            <h1>Customer List</h1>
+            <h:form>
+                <p:dataTable paginator="true" rows="10" rowsPerPageTemplate="5, 10" value="#{customerBean.customerList}" var="customer">
+                    <p:column>
+                        <f:facet name="header">
+                            <p:outputLabel value="ID" />
+                        </f:facet>
+                        <p:outputLabel value="#{customer.customerId}"/>
+                    </p:column>
+                    <p:column>
+                        <f:facet name="header">
+                            <p:outputLabel value="NAME" />
+                        </f:facet>
+                        <p:outputLabel value="#{customer.name}"/>
+                    </p:column>
+                    <p:column filterBy="#{customer.city}">
+                        <f:facet name="header">
+                            <p:outputLabel value="CITY" />
+                        </f:facet>
+                        <p:outputLabel value="#{customer.city}"/>
+                    </p:column>
+                    <p:column filterBy="#{customer.state}" sortBy="#{customer.state += ' ' += customer.city}">
+                        <f:facet name="header">
+                            <p:outputLabel value="STATE" />
+                        </f:facet>
+                        <p:outputLabel value="#{customer.state}"/>
+                    </p:column>
+                    <p:column>
+                        <f:facet name="header">
+                            <p:outputLabel value="DISCOUNT" />
+                        </f:facet>
+                        <p:outputLabel value="#{customer.discount.code += ' : ' += customer.discount.rate += '%'}"/>
+                    </p:column>
+                    <p:column sortBy="#{customer.zip.zipCode}">
+                        <f:facet name="header">
+                            <p:outputLabel value="ZIP" />
+                        </f:facet>
+                        <p:outputLabel value="#{customer.zip.zipCode}"/>
+                    </p:column>
+                </p:dataTable>
+            </h:form>
+        </div>
     </h:body>
 </html>
